--- a/Wristlist/app/src/main/AndroidManifest.xml
+++ b/Wristlist/app/src/main/AndroidManifest.xml
@@ -12,15 +12,19 @@
             android:name=".View.Dashboard.DashboardActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".View.Profile.ProfileActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".View.Login.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".View.Profile.ProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
