--- a/Wristlist/app/src/main/AndroidManifest.xml
+++ b/Wristlist/app/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".View.Dashboard.DashboardActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".View.Profile.ProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".View.Login.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,7 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.Orders.OrdersActivity"></activity>
+        <activity
+            android:name=".View.Orders.OrdersActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
